--- a/Content/PySim/1_intro_sim.ipynb
+++ b/Content/PySim/1_intro_sim.ipynb
@@ -269,7 +269,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code/answer\n"
+    "#your code/answer\n",
+    "sajofasfnosanoaosd\n",
+    "\n",
+    "git push <FAJH> <1_intro_sim.ipynb>\n",
+    "\n"
    ]
   },
   {
